--- a/main_noecho.Rmd
+++ b/main_noecho.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Module 3: Project 1 by Team 5"
-subtitle: "mothur vs. QIIME2 Microbiome Data Analysis"
+subtitle: "Mothur vs. QIIME2 Microbiome Data Analysis"
 author: 
   - Karl Abuan
   - May Ho
@@ -72,22 +72,20 @@ library("RColorBrewer")
 # }
 ```
 * * *
+# Abstract
+Saanich Inlet is an intermittently anoxic fjord on the coast of Vancouver Island, and it is commonly used as a model system for analyzing microbial community response to ocean deoxygenation. A portion 16S sequence data from Saanich Inlet were collected at various depths and were analyzed to estimate diversity and examine microbial abundance with respect to varying depths and oxygen levels. The analysis of pre-processed OTUs and ASVs - generated through Mothur and QIIME2 pipeline tools, respectively - showed that the community alpha-diversity values peaked at depths 10m and 100m and a minimum value was achieved at 200m. Further analysis of taxonomic levels showed that the phylum Proteobacteria was found to be the most abundant phylum among all samples. We used the genus Planctomyces to further examine how microbial communities changes across various depths and the oxygen gradient in Saanich Inlet. Analysis revealed that abundance of Planctomyces had no relationship with varying depths nor oxygen concentration in datasets derived from both Mothur or QIIME2. The analysis of data using QIIME2 revealed four genera within the phylum Planctomycetes (Candidatus_Scalindua, D_5_JL_ETNP_F27, FS140_16B_02_marine_group, D_5_Planctomyces), while Mothur identified one extra genus in addition to those identified by QIIME2: Pla3_lineage_ge. The abundances of the OTUs and ASVs within the Planctomyces genus did not change significantly differ across depth and oxygen concentration.
+
 # Introduction
 
-[Talk about microbial community deriving the most biogeochemical forces with citations]. The wide diversity of microbes present in the different ecosystem implies that an almost infinite number of individuals needs to be identified to accurately describe such communities. Nevertheless, the advancements in analyzing high-throughput marker-gene sequencing data made it feasible to construct molecular operational taxonomic units (OTUs) through clustering the sequencing reads using a variety of dissimilarity distance methods [@Chen2013:comparison]. Another compelling approach to cluster group of reads is based on amplicon sequence variants (ASVs) [@Callahan2017:exact]. 
+Saanich Inlet is a seasonally anoxic fjord located on the southeast coast of Vancouver Island, British Columbia, Canada (1), and it is commonly used as a model system for analyzing microbial community responses to ocean deoxygenation (2). Established by the shallow sill opening to the Strait of Georgia, circulation of basin water in Saanich Inlet is reduced. Together with microbial respiration of organic matter from surface waters and increased stratification due to strong temperature gradients between the upper and bottom waters (3), oxygen levels down the inlet water column decrease. These oxygen-deprived regions, termed oxygen minimum zones (4), host a diverse microbial community that mediate important biogeochemical processes.
 
-We resort to studying microbial composition obtained from Saanich Inlet oxygen minimum zone (OMZ). Saanich Inlet is a seasonally anoxic fjord on the coast of Vancouver Island, British Columbia, Canada [@Hawley2017:compendium;@Torres2017:compendium]. Most of the year, the fjord has an anoxic basin. At the end of summer, oxic waters flow into the basin, resulting in renewing the oxygen. From an OMZ research perspective, the Saanich Inlet is considered important as it provides an opportunity to study microbial ecology and various nutrient cycling in OMZs  particularly under oxic-anoxic shifts [@Hallam2017:monitoring] [You might add additional information]
+In Saanich Inlet, as the water column oxygen levels diminish, changes in nutrient and oxygen flow occur within its ecosystem. Microbes turn to use alternative terminal electron acceptors such as nitrate, followed by hydrogen sulfide which is developed at the bottom of the water column (4). During the fall, tide and ocean current changes allow cold, nutrient-rich oxygenated water to creep inside and re-oxygenate the inlet (5). This recurring phenomenon makes Saanich Inlet a great tractable model system to study biological processes that take place between oxic- anoxic-, suboxic- and sulfidic water layers.
 
-Planctomyces is .... [Why did you choose this genus why is it important to study?]
+The aim of this project is to investigate the changes in the microbial community structure found in Saanich Inlet with respect to various depths and decreasing oxygen concentrations. Through Mothur and QIIME 2 pipeline tools, the data is processed to obtain operational taxonomic units (OTUs) and amplicon sequence variants (ASVs) derived from sequence reads. Using the 16S rRNA gene as marker, OTUs are constructed and filtered. OTUs are defined as the clusters of reads grouped together differing by less than a fixed, arbitrary sequence dissimilarity threshold, often 3% (6-7). On the other hand, ASV is a new method developed to analyze a microbial community with finer resolution and it's independent from a reference database (6). The ASV method can distinguish sequence variants that differ by one nucleotide and infer the biological sequence in the sample before introducing sequencing and amplification errors (6). Using the OTUs and ASVs data sets, the microbial diversity at various depth and oxygen concentration of the Saanich Inlet samples is assessed with the main focus on the Planctomyces genus.
 
-To this end, we examined microbial diversity in Saanich Inlet dataset that was preprocess using mothur[@Schloss2009:introducing] and QIIME2[I didn't find citation]. While mothur uses [Talk about OTU here], QIIME2 produces ASVs [give a brief description about ASVs]. [Talk about differences between these two methods].
+Planctomyces genus is part of the Planctomycetes phylum (8). Planctomycetes are known for their ubiquity, metabolic diversity, and unique features such as intracellular compartmentalization that are typical of eukaryotes (8). They are abundant in oceans, freshwater, and soils. They also possess diverse metabolism - such as aerobic chemoheterotrophs - and autotrophic anaerobes that oxidize ammonia to nitrogen (anammox process) (8). These organisms facilitate the anammox process, contributing approximately 50% of the atmospheric nitrogen molecules in the global nitrogen cycle (8). Additionally, the anammox process is important in the nitrogen-rich-wastewater remediation technology (8). 
 
-We further address the planctomyces diversity correlation with oxygen and depth. We show that under the statistical framework there is little evidence to support our initial hypothesis. However, we claim that the linear model was not adequate to provide insightful knowledge regarding the existence of such correlations.
-
-The remaining of the paper is organized as follows. Section 2 describes the problem statements. Followed by [FILL] in Section 3. Finally, we summarize our contributions in Section 4.
-
-# Problem Formulation
-[Talk in depth about Planctomyces]
+This report further addresses the planctomyces diversity correlation with oxygen and depth. We show that under the statistical framework there is little evidence to support the initial hypothesis. However, we claim that the linear model was not adequate to provide insightful knowledge regarding the existence of such correlations.
 
 # Materials and Experimental Configuration
 ## Experimental Protocols
@@ -102,37 +100,32 @@ To understand the correlation of microbial diversity and oxygen concentration ac
 
 **P4.** Interpretation of abundance information of OTUs/ASVs of Planctomyces along with depth and/or oxygen concentration.
 
-
-## Dataset
-[Talk about Saanich Inlet dataset and various properties as documented in [@Hawley2017:compendium;@Torres2017:compendium]]
-
 ## Methods
 
+For both Mothur and QIIME2 pipeline, sequences from Saanich Inlet were amplified using 515F and 808R primers. Sequences were generated on MiSeq with Phred33 quality scores (1). For both the Mothur and QIIME2 pipelines, the data were cleaned up by filtering out various sequences (Low quality, chimeric sequences, etc.), aligned and classified with SILVA database, and trimmed by their start and end sites (9-10). The end results for both pipelines were then included in a phyloseq object which contains the following: OTU/ASV Table, Taxonomy, and Sample Metadata (9-10).  
+
 ### Shannon Diversity Index (SDI) and Chao1
-We applied _Shannon diversity index (SDI)_ to estimate the microbial diversity of  Saanich Inlet dataset. It has the following definition: 
-
+The Shannon diversity index (SDI) was used to estimate the microbial diversity of Saanich Inlet dataset with the following definition:
 $SDI = -\sum_i^R p_i \log(p_i)$
-
-where $p_i$ represents the distribution of individuals belonging to the $i$th species, and $R$ represents the number of distinct species [@Finotello2016:measuring]. It can be noted that SDI takes both the richness and abundance information to measure the expected uncertainty about species contained in a sample. The high SDI value suggests that species are evenly distributed while low  SDI value implies species are disproportionality situated. SDI value could be zero meaning the sample contains exactly one or no species at all. However, SDI does not directly model the expected richness of a sample and, neither, it represents an accurate estimation of species diversity because the probability distribution of species is not knowable exactly; it is only an estimate from a sample.
-
-In contrast to SDI, _Chao1_ could be used to recover approximate true richness:
-
+ 
+Where $p_i$ represents the distribution of individuals belonging to the $i$th species, and $R$ represents the number of distinct species. It can be noted that SDI takes both the richness and abundance information to measure the expected uncertainty about species contained in a sample. The high SDI value suggests that species are evenly distributed while low SDI value implies species are disproportionality situated. SDI value could be zero meaning the sample contains exactly one or no species at all. However, SDI does not directly model the expected richness of a sample nor represents an accurate estimation of species diversity because the probability distribution of species is not knowable exactly; it is only an estimate from the sample.
+ 
+In contrast to SDI, Chao1 could be used to recover approximate true richness:
 $Chao1=S_{obs}+\frac{\alpha}{2\beta}$
-
-where $S_{obs}$ represents the observed richness, $\alpha$ and $\beta$ indicates the number of different species with exactly one or more than two counts, respectively. The Chao1 method is used to rectify the richness by including the distribution of the rarest species [@Finotello2016:measuring].
-
+ 
+Where $S_{obs}$ represents the observed richness, $\alpha$ and $\beta$ indicates the number of different species with exactly one or more than two counts, respectively. The Chao1 method is used to rectify the richness by including the distribution of the rarest species.
+ 
 ### General Linear Model
-
-General linear model (LM) [@Hastie2009:elements] is employed to recover interactions between several factors that might be exhibited in Saanich Inlet dataset. In our experiments, we use a single regression model that relates a dependent variable $y$ (abundance) to a single quantitative independent variable $x_1$ (depth or oxygen), and it has the following form:
-
+ 
+General linear model was employed to recover interactions between several factors that might be exhibited in Saanich Inlet dataset. A single regression model that relates a dependent variable $y$ (abundance) to a single quantitative independent variable $x_1$ (depth or oxygen) was used:
+ 
 $y=\theta_0+\theta_1x_1+\epsilon$
-
+ 
 The parameter $\theta_0$ is the $y$-intercept, which represents the expected value of $y$ when $x_1$ is zero. The parameter $\theta_1$ is the slope of the regression line, and it represents the expected change (positive or negative) in $y$ (abundance) for a unit increase in $x_1$ (depth or oxygen). $\theta_1$ could be $0$ indicating no effective change with $x_1$. And, $\epsilon$ is the error term and is usually set to $0$.
-
-All the parameters could be estimated using ordinary least squares (OLS). However, to test the significance $\theta_1$, we formulate hypothesis testing: i)- the null hypothesis $H_0:\theta_1>\gamma$, which asserts that no additional predictive value over and above, contributed by $\theta_1$ and the $\gamma$ is an arbitrary cutoff probability from t-student distribution ; ii)- the alternative hypothesis $H_1: \theta_1\leq \gamma$ measures whether $x_j$ has additional predictive strengths.
-
-If the weight of $\theta_1$, referred to as the level of significance (or $p$-value) and defines as a probability, is below or equal to $\gamma$ then we accept $H_1$; otherwise, accept $H_0$.
-
+ 
+All the parameters could be estimated using ordinary least squares. However, to test the significance $\theta_1$, the following hypothesis testing was formulated: i) The null hypothesis $H_0:\theta_1>\gamma$, which asserts that no additional predictive value over and above, contributed by $\theta_1$ and the $\gamma$ is an arbitrary cutoff probability from t-student distribution ; ii) The alternative hypothesis $H_1: \theta_1\leq \gamma$ measures whether $x_j$ has additional predictive strengths.
+ 
+If the weight of $\theta_1$, referred to as the level of significance (or $p$-value) and defines as a probability, is below or equal to $\gamma$ then $H_1$ was accepted; otherwise, accept $H_0$.
 
 ## Data Preporocessing
 
@@ -161,17 +154,11 @@ basedOnGenus <- as.data.frame(tax_table(firstQTaxa)) %>%
 secondQTaxa <- subset_taxa(firstQTaxa, Genus %in% basedOnGenus$Genus)
 ```
 
-The samples were rarefied/normalized to $100,000$ sequences per sample to facilitate comparisons between samples. The rarefied counts were then converted to relative abundance percentages. Next, we perform a series of filterings according to three rules: i)- exclude OTUs that are not observed for more than $4$ samples, and ii)- prune samples and OTUs with unknown values, such as ``unclassified`` value. This has resulted in `r ntaxa(secondMTaxa)` and `r ntaxa(secondQTaxa)` taxa from mothur and QIIME2, respectively. No other preprocessing were applied. The implementations are done entirely using R (v 3.4.3) and relied on some efficient third-party libraries, such as ``phyloseq``, ``tidyverse``, ``gridExtra``, and ``magrittr``.
+The samples were normalized to $100,000$ sequences per sample to facilitate comparisons between samples. The rarefied counts were then converted to relative abundance percentages. Next, we perform a series of filterings according to three rules: i)- Exclude OTUs that are not observed for more than $4$ samples, and ii)- Prune samples and OTUs with unknown values, such as ``unclassified`` value. This has resulted in `r ntaxa(secondMTaxa)` and `r ntaxa(secondQTaxa)` taxa from mothur and QIIME2, respectively. No other preprocessing were applied. The implementations are done entirely using R (v 3.4.3) and relied on some efficient third-party libraries, such as ``phyloseq``, ``tidyverse``, ``gridExtra``, and ``magrittr`` (11-19).
 
 # Results
 
 ## Analysis of microbial community structure along with depth and oxygen concentration \label{sec:community}
-
-Motivated by the recent report [@Breitburg2018:declining] regarding the oxygen depletion in the global in the global ocean, we analyze [the contribution of microbes and their existence along .... Fill]. Hereby, we try to understand the compositional complexity of a microbial community across Saanich Inlet samples. For this, we use Shannon's diversity index (SDI), which considers both the species abundances and the total number of distinct species in its diversity estimation. Figures 1(a) and 2(a) depicts Shannon's diversity index for mothur and QIIME2 datasets. Immediately, we observe that SDI values peak at depth $10$ and $100$ before monotonically decreasing at $200$. The SDI values are maximal when the microbes are evenly distributed. Indeed, Figure 3 supports our claim, and we see an uneven distribution of Phylum at $200$ more than at $10$ or $100$ depths. However, the Shannon index values do not capture the number of different species or richness varying across depths. Instead, Figures 1(a) and 2(a) shed some light in this regard. 
-
-Similarly, by analyzing the association between oxygen concentration within a microbial community, we observe, as in Figures 1(b) and 2(b), that SDI values increase when oxygen become more abundant. This is not surprising since the abundance of oxygen indicates..... [FILL]. The boxplots in Figures 1(c) and 2(c) supports this evidence too. Another compleing observation that follows the work in [@Breitburg2018:declining;@Hawley2017:compendium] is the oxygen depletion along the water columns, as illustrated in Figures 1(d) and 2(d). 
-
-[ADD and EDIT]
 
 ```{r}
 rarefiedMRich <- estimate_richness(rarefiedM, measures = "Shannon")
@@ -209,6 +196,7 @@ annotate_figure(figureM, bottom = text_grob("Figure 1: Mothur",
                                             size = 12))
 ```
 
+Using Shannon's diversity index (SDI), which considered both the species abundances and the total number of distinct species in its diversity estimation, an attempt was made to understand the compositional complexity of a microbial community across samples from Saanich Inlet. Fig. 1(a) and 2(a) depicts the change in SDI across depth for Mothur and QIIME2 datasets. It was observed that SDI values peak at depths 10m and 100m before monotonically decreasing and reaching the minimum value at 200m. The SDI values were maximal when the microbes were evenly distributed. The results indicated in Fig. 3 supports this claim since an uneven distribution of phylum was observed at 200m more than at 10m or 100m depths. Analyses showed that oxygen level was slowly decreasing with increased depth of Saanich Inlet as shown in Fig. 1(d). The SDI was higher in the oxic part of the ocean and was much lower in the anoxic part of Saanich Inlet as presented in Fig. 1 (b) and 2(b). Therefore, alpha diversity was higher at high oxygen concentration levels at low depth and lower at low oxygen concentration at high depth.
 
 ```{r}
 rarefiedQRich <- estimate_richness(rarefiedQ, measures = "Shannon")
@@ -245,6 +233,7 @@ annotate_figure(figureQ, bottom = text_grob("Figure 2: QIIME2",
                                             size = 12))
 ```
 
+A linear model analysis (Table 2) was used to investigate the correlation of Planctomyces' abundance as a function of depth and/or oxygen concentration. From a statistical perspective, it can be inferred that the abundance of Planctomyces had no relationship with varying depths nor oxygen concentration. The p-values, which were above the 5% arbitrary cut-off, also suggested that differences in abundance of Planctomyces with respect to depth and oxygen concentration did not differ significantly. These results were consistent with either data sets derived from Mothur and QIIME2.
 
 ```{r fig.width=8}
 colourCount <- length(unique(tax_table(secondMTaxa)[, "Phylum"]))
@@ -278,7 +267,6 @@ annotate_figure(ggarrange(p2, ncol = 1, nrow = 1),
 
 ## Analysis of abundance information of Planctomyces along with depth and/or oxygen concentration \label{sec:OTUabundance}
 
-
 ```{r workingTaxa}
 workingMTaxa = subset_taxa(secondMTaxa, Genus == "Planctomyces")
 workingQTaxa = subset_taxa(secondQTaxa, Genus == "D_5__Planctomyces")
@@ -295,7 +283,7 @@ colnames(phylumMQ) <- c("Phylums from Mothur","Phylums from QIIME2")
 kable(phylumMQ,caption="Phylums from Mothur vs Phylums from QIIME2")
 ```
 
-Based on our previous analysis and from Figure $3$, it is clear that the microbial species and their distributions in Saanich inlet samples do indeed vary. Table $1$ summarizes the phyla in both mothur and QIIME2 for Saanich Inlet dataset. We see that the number of hypothetical phyla present in mothur is estimated to be `r length(get_taxa_unique(physeq = secondMTaxa, taxonomic.rank = "Phylum"))`. Throught intesive investigation, we find that the \emph{Planctomycetes} phylum is differentially presented across samples. And, after further exploring its genus distribution, as depicted in Figure 4, we exhibit that \emph{Planctomyces} genus indeed are unevenly distributed across water columns. This is not coincidence because the [Fill based on some paper]. We intitally hypothesize that \emph{Planctomyces} would be represented differently across depths, and for this, we performed regression tests.
+Based on Fig. 3, the phylum Proteobacteria was found to be the most abundant from depth of 10m to 200m compared to the other phyla. The abundance of phylum Thaumarchaeota was found to be decreasing from 100m to 200m. The abundance of the other phyla Actinobacteria, Bacteroidetes, Marinimicrobia, Planctomycetes, and Verrucomicrobia were observed as depth-independent. In the QIIME2 data, there were much less phyla presented (4 types of phyla) in comparison with the Mothur data (7 types of phyla). The abundance of Bacteriodetes seemed to be decreasing from depth 10m to 200m. The abundance of Thaumarcheota was found to be decreasing from depth of 100m to 165m. There was no significant relationship found between the abundance of Proteobacteria and Planctomycetes in regards to depth. Overall, it was observed that the distribution of phyla was changing with depth in the Mothur and QIIME2 data.
 
 ```{r fig.height=6.5, fig.width=5}
 subMTaxa <- subset_taxa(secondMTaxa, Phylum == "Planctomycetes")
@@ -328,13 +316,9 @@ annotate_figure(ggarrange(figureM, figureQ,
 ```
 
 
-The well known general linear model is employed to recover relationships that might be exhibited between explanatory and target variables. We decompose our hypothesize in a series of experimental tests: i)- first, we investigate the correlation of Planctomyces abundance as a function of depth; and ii)- then, we cross-examine the Planctomyces abundance as a function of oxygen concentration. 
+The well known general linear model is employed to recover relationships that might be exhibited between explanatory and target variables. We decompose our hypothesize in a series of experimental tests: i)- First, we investigate the correlation of Planctomyces abundance as a function of depth; and ii)- Then, we cross-examine the Planctomyces abundance as a function of oxygen concentration. 
 
-Table 2. shows the results of our test analysis. From the statistical perspective, it can be inferred that there might be no relations with either the depth or the oxyzen. This is becasue the coefficients of depth and oxygen and their p-values were found to be $(-0.0003609,$ p-value $= 0.7385598)$ and $(-0.0002544,$ p-value$=0.7616253)$, respectively, which are not statistically significant at $5\%$ (an arbitrary cutoff). Hence, we might reason that there is a little statistical evidence to support our belief that Planctomyces indeed varies across depth and oxygen. 
-
-Such contradictory conclusion suggests to accept the null hyptothesis that states no intersting patterns exist for Planctomyces. However, the fitting problem associated with the general linear model underestimate the existence of any kind of interesting relationships. Indeed, when we manually inspected the samples, we found that samples from depth $10, 150, 165$ and $200$ do not or are less planctomyces abundant than at $100, 120$, and $135$ depths, which imply that Planctomyces is quite differentially abundant in Saanich Inlet dataset. Perhaps, using more complex models might provide a better predictive analysis; but for now on, we stick with the statistical outputs.  
-
-[WRITE and EDIT]
+From the analyses, there were 4 OTUs within the Planctomyces genus as shown in Table 4. The abundances of the OTUs within the Planctomyces genus did not significantly differ across depth. None of the linear models generated for these OTUs have a p-value below 0.05, hence a relationship cannot be established between abundance and depth. The abundances of these OTUs also did not change significantly with oxygen concentration. The linear models generated to compare the relationship between abundance and oxygen concentration also had p-values that were above 0.05. This indicated that the abundances of these OTUs were unaffected by oxygen concentration. Similar results were observed from the ASV results generated from QIIME2, where none of the p-values generated from the linear models were below 0.05.
 
 ```{r fig.height=10, fig.width=8}
 otu_stats <- data.frame()
@@ -569,8 +553,30 @@ annotate_figure(ggarrange(figureM, figureQ, ncol = 1, nrow = 2,
                                    face = "bold", size = 12))
 ```
 
+To summarize, there were no significant differences between the Mothur and QIIME2 data in terms of depths, oxygen concentration, and richness. However, there were some differences that should be noted:
+**1)** Higher Shannon's Diversity Index was noted in QIIME2 vs. Mothur in terms of oxygen concentrations and anoxic versus oxic levels (Fig. 1 and 2).
+**2)** An extra genus was present in the genus distribution of the Planctomycetes phylum across samples from Mothur: Pla3_lineage_ge (Fig. 4).
+**3)** In terms of abundance, the genus distribution of Planctomyces in QIIME2 data was higher than Mothur (Figure 4). Specifically, in Fig. 4 the QIIME2 data on Planctomyces (purple) almost doubled the number when compared to the Mothur data on Planctomyces (orange).
+**4)** The scaling of abundance (Fig. 4) in the genus distribution of planctomycetes across samples from Mothur were also noted to be higher than the scaling of QIIME2 data (Mothur has the Saanich depth of 165m to be approx. 2.0 for abundance whereas QIIME2 has the Saanich depth of 165m to be approx. 1.2 for abundance).
 
 # Discussion
+
+Planctomyces, also known as anammox bacteria, are known to perform an important process in the nitrogen cycle: Anammox (NO~2~^-^ + NH~4~^+^ -> N~2~ + 2 H~2~O). Anammox can be carried out under anaerobic conditions and is an important process for recycling nitrogen back into the environment and for waste-water treatment (21).  
+ 
+One study have suggested that approximately 30 - 50% of the total nitrogen loss is currently estimated to take place in OMZs (Oxygen Minimum Zone), and very low concentrations of ammonium in suboxic waters indicate that the anammox process could play an important role in these ecosystems (21); it was reported that anammox bacteria were very sensitive to oxygen and that oxygen concentrations as little as 1 uM can reversibly inhibited the anammox reaction. It has also been suggested that the ammonium concentrations were below the detection limit in OMZs and anammox, rather than heterotrophic denitrification, was responsible for the nitrogen loss (21). Since anammox bacteria abundance was correlated with nitrogen loss, it was expected that there will be higher levels of anammox bacteria such as Planctomyces in OMZs. Therefore, based on the information provided by the study, the fact that no relationship is observed between the abundance of Planctomyces with oxygen level and ocean depth is not expected.  
+ 
+However, another study had pointed out that Planctomyces were most abundant in the oxic part of the wetland profiles (22). The respective cell numbers were in the range 1.1-6.7 x 10^7^ cells g^-1^ of wet peat, comprising 2-14% of total bacterial cells, and displaying linear correlation to the peat water pH (22). This result contradicted with the research study done by Koo et al, which observed the decline of Planctomycetes population at the oxic part of the ocean (21). Also, Dedysh and Ivanova suggested that different species of Planctomycetes colonized different parts of the ocean: Oxic peat layers were dominated by representatives of the Isosphaera-Singulisphaera group, while anoxic peat was inhabited mostly by Zavarzinella- and Pirellula-like Planctomyces (22). Therefore, the fact that no was no significance between the Planctomyces population versus the oxygen concentration and depth were justifiable, since different stains of Planctomycetes colonized different parts of the ocean. The specific strain of anammox Planctomycetes was found to be more abundant in anoxic part of the ocean, but different strains of Planctomycetes were found to be distributed across parts of the ocean.  
+ 
+In terms of the bioinformatic pipelines commonly used in metagenomics, some differences were observed between the Mothur and QIIME2 data:  
+**1)**     Higher Shannon's diversity indexes were observed in the QIIME2 data when compared to the Mothur data in terms of oxygen concentrations and oxic versus anoxic levels. One possible explanation for the higher Shannon's diversity indexes in the QIIME2 data could be due to the difference in treatment of OTU and ASV. QIIME2 treats each ASV as an individual species, whereas Mothur uses the representative sequence of each OTU to determine the taxonomy (24). This could potentially lead to higher Shannon's diversity indexes in the QIIME2 when compared to the Mothur data.  
+**2)**     The absence of Pla3_lineage_ge at the genus level in the QIIME2 data were also noted when compared to the Mothur data. One possibility for this observation is that QIIME2 discards more data through stricter filtering (23). Another possibility for this observation is that Mothur keeps more of these types of data even if they might not represent the "real" taxa in the community (24).  
+**3)**     The relative abundance of Planctomyces at the genus level were indicated to be higher in the QIIME2 data in comparison to the Mothur data. The removal of Pla3_lineage_ge by QIIME2 described above would affect the relative abundance calculation, which is the percent composition of an organism of a particular kind relative to the total number of organisms in the area. By not considering Pla3_lineage_ge in the total number of organisms, this would lead to a higher relative abundance of Planctomyces across all depths in the QIIME2 data.  
+**4)**     The relative abundance in the genus distribution of planctomycetes across samples from Mothur data were also noted to be higher than the relative abundance of QIIME2 data. This could be due to Mothur keeping more data than QIIME2, which would affect the scaling of relative abundance. Similar to the previous point, these extra data kept by Mothur might not represent the "real" taxa in the community (24).  
+ 
+In addition to the comparisons of Mothur and QIIME2 in our analyses, another study demonstrated that between QIIME, Mothur, and MG-RAST, differences were mostly observed at the genus level due to Mothur's tendency to have unclassified reads (2). These inconsistencies highlight the limitations of bioinformatics pipelines and their ability to distinguish between some 16S rRNA sequences at a genus and species level because of their near identical 16S rRNA sequences.  
+ 
+Additional research questions can be extracted from this dataset for more in-depth exploration in future directions. In terms of the unclassified OTUs/ASVs, future research can be done to determine how significant the unclassified taxonomies are in impacting the geochemical gradients in Saanich Inlet in order to better understand their roles in the nutrient cycles. Another alternative question that can be addressed would be whether there are any significant differences between the other genera that are present in both the Mothur and QIIM2 data.
+
 
 ---
 
