--- a/main.bib
+++ b/main.bib
@@ -1,6 +1,100 @@
-% This file was created with JabRef 2.10.
-% Encoding: UTF-8
+@article{mcmurdie2013phyloseq,
+  title={phyloseq: an R package for reproducible interactive analysis and graphics of microbiome census data},
+  author={McMurdie, Paul J and Holmes, Susan},
+  journal={PloS one},
+  volume={8},
+  number={4},
+  pages={e61217},
+  year={2013},
+  publisher={Public Library of Science}
+}
 
+@article{wickham2017tidyverse,
+  title={Tidyverse: Easily install and load’tidyverse’packages},
+  author={Wickham, Hadley},
+  journal={R package version},
+  volume={1},
+  number={1},
+  year={2017}
+}
+@article{auguie2012gridextra,
+  title={gridExtra: functions in Grid graphics},
+  author={Auguie, Baptiste},
+  journal={R package version 0.9},
+  volume={1},
+  year={2012}
+}
+@article{bache2014magrittr,
+  title={magrittr: a forward-pipe operator for R},
+  author={Bache, Stefan Milton and Wickham, Hadley},
+  journal={R package version},
+  volume={1},
+  number={1},
+  year={2014}
+}
+@article{kassambara2017ggpubr,
+  title={ggpubr:“ggplot2” Based Publication Ready Plots, R Packag},
+  author={Kassambara, Alboukadel},
+  journal={Version 0.1},
+  volume={2},
+  year={2017}
+}
+@book{xie2015dynamic,
+  title={Dynamic Documents with R and knitr},
+  author={Xie, Yihui},
+  volume={29},
+  year={2015},
+  publisher={CRC Press}
+}
+
+@article{koo2017comparison,
+  title={Comparison of two bioinformatics tools used to characterize the microbial diversity and predictive functional attributes of microbial mats from Lake Obersee, Antarctica},
+  author={Koo, Hyunmin and Hakim, Joseph A and Morrow, Casey D and Eipers, Peter G and Davila, Alfonso and Andersen, Dale T and Bej, Asim K},
+  journal={Journal of microbiological methods},
+  volume={140},
+  pages={15--22},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{dedysh2012abundance,
+  title={Abundance, diversity, and depth distribution of Planctomycetes in acidic northern wetlands},
+  author={Dedysh, Svetlana N and Ivanova, Anastasia O},
+  journal={Frontiers in microbiology},
+  volume={3},
+  pages={5},
+  year={2012},
+  publisher={Frontiers}
+}
+
+
+@misc{differences,
+  author = {Kim Dill McFarland},
+  title = {{Major differences in alph diversity between q1 and q2}},
+  howpublished = "\url{https://forum.qiime2.org/t/major-differences-in-alph-diversity-between-q1-and-q2/2419/3}",
+  year = {2018}, 
+}
+
+@misc{intro_OTU_ASV,
+  author = {Kim Dill McFarland},
+  title = {{OTU vs. ASV}},
+  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/20180307_intro_OTU_ASV.pdf}",
+  year = {2018}, 
+}
+
+@misc{mothur,
+  author = {Kim Dill McFarland},
+  title = {{mothur Pipeline}},
+  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/mothur_pipeline.html}",
+  year = {2018}, 
+}
+
+@misc{QIIME2,
+  author = {Julia Beni},
+  title = {{QIIME2 Pipeline}},
+  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/qiime2_pipeline.html}",
+  year = {2018}, 
+}
 
 @Article{Breitburg2018:declining,
   Title                    = {Declining oxygen in the global ocean and coastal waters},
@@ -13,18 +107,38 @@
 
   Publisher                = {American Association for the Advancement of Science}
 }
-
-@Article{Callahan2017:exact,
-  Title                    = {Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
-  Author                   = {Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
-  Journal                  = {The ISME journal},
-  Year                     = {2017},
-  Number                   = {12},
-  Pages                    = {2639},
-  Volume                   = {11},
-
-  Publisher                = {Nature Publishing Group}
+@article{case2007use,
+  title={Use of 16S rRNA and rpoB genes as molecular markers for microbial ecology studies},
+  author={Case, Rebecca J and Boucher, Yan and Dahll{\"o}f, Ingela and Holmstr{\"o}m, Carola and Doolittle, W Ford and Kjelleberg, Staffan},
+  journal={Applied and environmental microbiology},
+  volume={73},
+  number={1},
+  pages={278--288},
+  year={2007},
+  publisher={Am Soc Microbiol}
 }
+@article{fuerst2011beyond,
+  title={Beyond the bacterium: planctomycetes challenge our concepts of microbial structure and function},
+  author={Fuerst, John A and Sagulenko, Evgeny},
+  journal={Nature Reviews Microbiology},
+  volume={9},
+  number={6},
+  pages={403},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{callahan2017exact,
+  title={Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
+  author={Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
+  journal={The ISME journal},
+  volume={11},
+  number={12},
+  pages={2639},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
 
 @Article{Chen2013:comparison,
   Title                    = {A comparison of methods for clustering 16S rRNA sequences into OTUs},
@@ -64,6 +178,47 @@
   Publisher                = {Springer},
   Year                     = {2009},
   Edition                  = {2}
+}
+@article{anderson1973deep,
+  title={Deep water renewal in Saanich Inlet, an intermittently anoxic basin},
+  author={Anderson, James J and Devol, Allan H},
+  journal={Estuarine and Coastal Marine Science},
+  volume={1},
+  number={1},
+  pages={1--10},
+  year={1973},
+  publisher={Elsevier}
+}
+
+@article{wright2012microbial,
+  title={Microbial ecology of expanding oxygen minimum zones},
+  author={Wright, Jody J and Konwar, Kishori M and Hallam, Steven J},
+  journal={Nature Reviews Microbiology},
+  volume={10},
+  number={6},
+  pages={381},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{ulloa2012microbial,
+  title={Microbial oceanography of anoxic oxygen minimum zones},
+  author={Ulloa, Osvaldo and Canfield, Donald E and DeLong, Edward F and Letelier, Ricardo M and Stewart, Frank J},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={40},
+  pages={15996--16003},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+
+@article{hallam2017monitoring,
+  title={Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
+  author={Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
+  journal={Scientific data},
+  volume={4},
+  year={2017},
+  publisher={Nature Publishing Group}
 }
 
 @Article{Hawley2017:compendium,
