--- a/main.bib
+++ b/main.bib
@@ -1,99 +1,38 @@
-@article{mcmurdie2013phyloseq,
-  title={phyloseq: an R package for reproducible interactive analysis and graphics of microbiome census data},
-  author={McMurdie, Paul J and Holmes, Susan},
-  journal={PloS one},
-  volume={8},
-  number={4},
-  pages={e61217},
-  year={2013},
-  publisher={Public Library of Science}
+@Article{anderson1973deep,
+  Title                    = {Deep water renewal in Saanich Inlet, an intermittently anoxic basin},
+  Author                   = {Anderson, James J and Devol, Allan H},
+  Journal                  = {Estuarine and Coastal Marine Science},
+  Year                     = {1973},
+  Number                   = {1},
+  Pages                    = {1--10},
+  Volume                   = {1},
+
+  Publisher                = {Elsevier}
 }
 
-@article{wickham2017tidyverse,
-  title={Tidyverse: Easily install and load’tidyverse’packages},
-  author={Wickham, Hadley},
-  journal={R package version},
-  volume={1},
-  number={1},
-  year={2017}
-}
-@article{auguie2012gridextra,
-  title={gridExtra: functions in Grid graphics},
-  author={Auguie, Baptiste},
-  journal={R package version 0.9},
-  volume={1},
-  year={2012}
-}
-@article{bache2014magrittr,
-  title={magrittr: a forward-pipe operator for R},
-  author={Bache, Stefan Milton and Wickham, Hadley},
-  journal={R package version},
-  volume={1},
-  number={1},
-  year={2014}
-}
-@article{kassambara2017ggpubr,
-  title={ggpubr:“ggplot2” Based Publication Ready Plots, R Packag},
-  author={Kassambara, Alboukadel},
-  journal={Version 0.1},
-  volume={2},
-  year={2017}
-}
-@book{xie2015dynamic,
-  title={Dynamic Documents with R and knitr},
-  author={Xie, Yihui},
-  volume={29},
-  year={2015},
-  publisher={CRC Press}
+@Article{auguie2012gridextra,
+  Title                    = {gridExtra: functions in Grid graphics},
+  Author                   = {Auguie, Baptiste},
+  Journal                  = {R package version 0.9},
+  Year                     = {2012},
+  Volume                   = {1}
 }
 
-@article{koo2017comparison,
-  title={Comparison of two bioinformatics tools used to characterize the microbial diversity and predictive functional attributes of microbial mats from Lake Obersee, Antarctica},
-  author={Koo, Hyunmin and Hakim, Joseph A and Morrow, Casey D and Eipers, Peter G and Davila, Alfonso and Andersen, Dale T and Bej, Asim K},
-  journal={Journal of microbiological methods},
-  volume={140},
-  pages={15--22},
-  year={2017},
-  publisher={Elsevier}
+@Article{bache2014magrittr,
+  Title                    = {magrittr: a forward-pipe operator for R},
+  Author                   = {Bache, Stefan Milton and Wickham, Hadley},
+  Journal                  = {R package version},
+  Year                     = {2014},
+  Number                   = {1},
+  Volume                   = {1}
 }
 
-@article{dedysh2012abundance,
-  title={Abundance, diversity, and depth distribution of Planctomycetes in acidic northern wetlands},
-  author={Dedysh, Svetlana N and Ivanova, Anastasia O},
-  journal={Frontiers in microbiology},
-  volume={3},
-  pages={5},
-  year={2012},
-  publisher={Frontiers}
-}
+@Misc{QIIME2,
+  Title                    = {{QIIME2 Pipeline}},
 
-
-@misc{differences,
-  author = {Kim Dill McFarland},
-  title = {{Major differences in alph diversity between q1 and q2}},
-  howpublished = "\url{https://forum.qiime2.org/t/major-differences-in-alph-diversity-between-q1-and-q2/2419/3}",
-  year = {2018}, 
-}
-
-@misc{intro_OTU_ASV,
-  author = {Kim Dill McFarland},
-  title = {{OTU vs. ASV}},
-  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/20180307_intro_OTU_ASV.pdf}",
-  year = {2018}, 
-}
-
-@misc{mothur,
-  author = {Kim Dill McFarland},
-  title = {{mothur Pipeline}},
-  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/mothur_pipeline.html}",
-  year = {2018}, 
-}
-
-@misc{QIIME2,
-  author = {Julia Beni},
-  title = {{QIIME2 Pipeline}},
-  howpublished = "\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/qiime2_pipeline.html}",
-  year = {2018}, 
+  Author                   = {Julia Beni},
+  HowPublished             = {\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/qiime2_pipeline.html}},
+  Year                     = {2018}
 }
 
 @Article{Breitburg2018:declining,
@@ -107,38 +46,30 @@
 
   Publisher                = {American Association for the Advancement of Science}
 }
-@article{case2007use,
-  title={Use of 16S rRNA and rpoB genes as molecular markers for microbial ecology studies},
-  author={Case, Rebecca J and Boucher, Yan and Dahll{\"o}f, Ingela and Holmstr{\"o}m, Carola and Doolittle, W Ford and Kjelleberg, Staffan},
-  journal={Applied and environmental microbiology},
-  volume={73},
-  number={1},
-  pages={278--288},
-  year={2007},
-  publisher={Am Soc Microbiol}
-}
-@article{fuerst2011beyond,
-  title={Beyond the bacterium: planctomycetes challenge our concepts of microbial structure and function},
-  author={Fuerst, John A and Sagulenko, Evgeny},
-  journal={Nature Reviews Microbiology},
-  volume={9},
-  number={6},
-  pages={403},
-  year={2011},
-  publisher={Nature Publishing Group}
+
+@Article{callahan2017exact,
+  Title                    = {Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
+  Author                   = {Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
+  Journal                  = {The ISME journal},
+  Year                     = {2017},
+  Number                   = {12},
+  Pages                    = {2639},
+  Volume                   = {11},
+
+  Publisher                = {Nature Publishing Group}
 }
 
-@article{callahan2017exact,
-  title={Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
-  author={Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
-  journal={The ISME journal},
-  volume={11},
-  number={12},
-  pages={2639},
-  year={2017},
-  publisher={Nature Publishing Group}
-}
+@Article{case2007use,
+  Title                    = {Use of 16S rRNA and rpoB genes as molecular markers for microbial ecology studies},
+  Author                   = {Case, Rebecca J and Boucher, Yan and Dahll{\"o}f, Ingela and Holmstr{\"o}m, Carola and Doolittle, W Ford and Kjelleberg, Staffan},
+  Journal                  = {Applied and environmental microbiology},
+  Year                     = {2007},
+  Number                   = {1},
+  Pages                    = {278--288},
+  Volume                   = {73},
 
+  Publisher                = {Am Soc Microbiol}
+}
 
 @Article{Chen2013:comparison,
   Title                    = {A comparison of methods for clustering 16S rRNA sequences into OTUs},
@@ -152,6 +83,17 @@
   Publisher                = {Public Library of Science}
 }
 
+@Article{dedysh2012abundance,
+  Title                    = {Abundance, diversity, and depth distribution of Planctomycetes in acidic northern wetlands},
+  Author                   = {Dedysh, Svetlana N and Ivanova, Anastasia O},
+  Journal                  = {Frontiers in microbiology},
+  Year                     = {2012},
+  Pages                    = {5},
+  Volume                   = {3},
+
+  Publisher                = {Frontiers}
+}
+
 @Article{Finotello2016:measuring,
   Title                    = {Measuring the diversity of the human microbiota with targeted next-generation sequencing},
   Author                   = {Finotello, Francesca and Mastrorilli, Eleonora and Di Camillo, Barbara},
@@ -162,7 +104,19 @@
   Publisher                = {Oxford University Press}
 }
 
-@Article{Hallam2017:monitoring,
+@Article{fuerst2011beyond,
+  Title                    = {Beyond the bacterium: planctomycetes challenge our concepts of microbial structure and function},
+  Author                   = {Fuerst, John A and Sagulenko, Evgeny},
+  Journal                  = {Nature Reviews Microbiology},
+  Year                     = {2011},
+  Number                   = {6},
+  Pages                    = {403},
+  Volume                   = {9},
+
+  Publisher                = {Nature Publishing Group}
+}
+
+@Article{hallam2017monitoring,
   Title                    = {Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
   Author                   = {Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
   Journal                  = {Scientific data},
@@ -178,47 +132,6 @@
   Publisher                = {Springer},
   Year                     = {2009},
   Edition                  = {2}
-}
-@article{anderson1973deep,
-  title={Deep water renewal in Saanich Inlet, an intermittently anoxic basin},
-  author={Anderson, James J and Devol, Allan H},
-  journal={Estuarine and Coastal Marine Science},
-  volume={1},
-  number={1},
-  pages={1--10},
-  year={1973},
-  publisher={Elsevier}
-}
-
-@article{wright2012microbial,
-  title={Microbial ecology of expanding oxygen minimum zones},
-  author={Wright, Jody J and Konwar, Kishori M and Hallam, Steven J},
-  journal={Nature Reviews Microbiology},
-  volume={10},
-  number={6},
-  pages={381},
-  year={2012},
-  publisher={Nature Publishing Group}
-}
-
-@article{ulloa2012microbial,
-  title={Microbial oceanography of anoxic oxygen minimum zones},
-  author={Ulloa, Osvaldo and Canfield, Donald E and DeLong, Edward F and Letelier, Ricardo M and Stewart, Frank J},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={109},
-  number={40},
-  pages={15996--16003},
-  year={2012},
-  publisher={National Acad Sciences}
-}
-
-@article{hallam2017monitoring,
-  title={Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
-  author={Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
-  journal={Scientific data},
-  volume={4},
-  year={2017},
-  publisher={Nature Publishing Group}
 }
 
 @Article{Hawley2017:compendium,
@@ -244,6 +157,61 @@
   Publisher                = {Wiley Online Library}
 }
 
+@Article{kassambara2017ggpubr,
+  Title                    = {ggpubr: 'ggplot2' Based Publication Ready Plots, R Packag},
+  Author                   = {Kassambara, Alboukadel},
+  Journal                  = {Version 0.1},
+  Year                     = {2017},
+  Volume                   = {2}
+}
+
+@Article{koo2017comparison,
+  Title                    = {Comparison of two bioinformatics tools used to characterize the microbial diversity and predictive functional attributes of microbial mats from Lake Obersee, Antarctica},
+  Author                   = {Koo, Hyunmin and Hakim, Joseph A and Morrow, Casey D and Eipers, Peter G and Davila, Alfonso and Andersen, Dale T and Bej, Asim K},
+  Journal                  = {Journal of microbiological methods},
+  Year                     = {2017},
+  Pages                    = {15--22},
+  Volume                   = {140},
+
+  Publisher                = {Elsevier}
+}
+
+@Misc{differences,
+  Title                    = {{Major differences in alph diversity between q1 and q2}},
+
+  Author                   = {Kim Dill McFarland},
+  HowPublished             = {\url{https://forum.qiime2.org/t/major-differences-in-alph-diversity-between-q1-and-q2/2419/3}},
+  Year                     = {2018}
+}
+
+@Misc{intro_OTU_ASV,
+  Title                    = {{OTU vs. ASV}},
+
+  Author                   = {Kim Dill McFarland},
+  HowPublished             = {\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/20180307_intro_OTU_ASV.pdf}},
+  Year                     = {2018}
+}
+
+@Misc{mothur,
+  Title                    = {{mothur Pipeline}},
+
+  Author                   = {Kim Dill McFarland},
+  HowPublished             = {\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/mothur_pipeline.html}},
+  Year                     = {2018}
+}
+
+@Article{mcmurdie2013phyloseq,
+  Title                    = {phyloseq: an R package for reproducible interactive analysis and graphics of microbiome census data},
+  Author                   = {McMurdie, Paul J and Holmes, Susan},
+  Journal                  = {PloS one},
+  Year                     = {2013},
+  Number                   = {4},
+  Pages                    = {e61217},
+  Volume                   = {8},
+
+  Publisher                = {Public Library of Science}
+}
+
 @Article{Schloss2009:introducing,
   Title                    = {Introducing mothur: open-source, platform-independent, community-supported software for describing and comparing microbial communities},
   Author                   = {Schloss, Patrick D and Westcott, Sarah L and Ryabin, Thomas and Hall, Justine R and Hartmann, Martin and Hollister, Emily B and Lesniewski, Ryan A and Oakley, Brian B and Parks, Donovan H and Robinson, Courtney J and others},
@@ -265,5 +233,46 @@
   Volume                   = {4},
 
   Publisher                = {Nature Publishing Group}
+}
+
+@Article{ulloa2012microbial,
+  Title                    = {Microbial oceanography of anoxic oxygen minimum zones},
+  Author                   = {Ulloa, Osvaldo and Canfield, Donald E and DeLong, Edward F and Letelier, Ricardo M and Stewart, Frank J},
+  Journal                  = {Proceedings of the National Academy of Sciences},
+  Year                     = {2012},
+  Number                   = {40},
+  Pages                    = {15996--16003},
+  Volume                   = {109},
+
+  Publisher                = {National Acad Sciences}
+}
+
+@Article{wickham2017tidyverse,
+  Title                    = {Tidyverse: Easily install and load’tidyverse’packages},
+  Author                   = {Wickham, Hadley},
+  Journal                  = {R package version},
+  Year                     = {2017},
+  Number                   = {1},
+  Volume                   = {1}
+}
+
+@Article{wright2012microbial,
+  Title                    = {Microbial ecology of expanding oxygen minimum zones},
+  Author                   = {Wright, Jody J and Konwar, Kishori M and Hallam, Steven J},
+  Journal                  = {Nature Reviews Microbiology},
+  Year                     = {2012},
+  Number                   = {6},
+  Pages                    = {381},
+  Volume                   = {10},
+
+  Publisher                = {Nature Publishing Group}
+}
+
+@Book{xie2015dynamic,
+  Title                    = {Dynamic Documents with R and knitr},
+  Author                   = {Xie, Yihui},
+  Publisher                = {CRC Press},
+  Year                     = {2015},
+  Volume                   = {29}
 }
 
