--- a/main.Rmd
+++ b/main.Rmd
@@ -78,7 +78,7 @@ scale_fill_discrete <-  function(palname=pal, ...){
       
 Saanich Inlet is a seasonally anoxic fjord located on the southeast coast of Vancouver Island, British Columbia, Canada [@Hawley2017:compendium], and it is commonly used as a model system for analyzing microbial community responses to ocean deoxygenation [@hallam2017monitoring]. Established by the shallow sill opening to the Strait of Georgia, circulation of basin water in Saanich Inlet is reduced. Together with microbial respiration of organic matter from surface waters and increased stratification due to strong temperature gradients between the upper and bottom waters [@ulloa2012microbial], oxygen levels down the inlet water column decrease. These oxygen-deprived regions, termed oxygen minimum zones [@wright2012microbial], host a diverse microbial community that mediate important biogeochemical processes.
     
-In Saanich Inlet, as the water column oxygen levels diminish, changes in nutrient and oxygen flow occur within its ecosystem. Microbes turn to use alternative terminal electron acceptors such as nitrate, followed by hydrogen sulfide which is developed at the bottom of the water column [@wright2012microbial]. During the fall, tide and ocean current changes allow cold, nutrient-rich oxygenated water to creep inside and re-oxygenate the inlet [@anderson1973deep]. This recurring phenomenon makes Saanich Inlet a great tractable model system to study biological processes that take place between oxic- anoxic-, suboxic- and sulfidic water layers.
+In Saanich Inlet, as the water column oxygen levels diminish, changes in nutrient and oxygen flow occur within its ecosystem. Microbes turn to use alternative terminal electron acceptors such as nitrate, followed by sulphate [@wright2012microbial]. During the fall, tide and ocean current changes allow cold, nutrient-rich oxygenated water to creep inside and re-oxygenate the inlet [@anderson1973deep]. This recurring phenomenon makes Saanich Inlet a great tractable model system to study biological processes that take place between oxic- anoxic-, suboxic- and sulfidic water layers.
     
 The aim of this project is to investigate the changes in the microbial community structure found in Saanich Inlet with respect to various depths and decreasing oxygen concentrations. Through Mothur and QIIME2 pipeline tools, the data is processed to obtain operational taxonomic units (OTUs) and amplicon sequence variants (ASVs) derived from sequence reads. Using the 16S rRNA gene as marker, OTUs are constructed and filtered. OTUs are defined as the clusters of reads grouped together differing by less than a fixed, arbitrary sequence dissimilarity threshold, often $3\%$ [@callahan2017exact;@case2007use]. On the other hand, ASV is a new method developed to analyze a microbial community with finer resolution and it's independent from a reference database [@callahan2017exact]. The ASV method can distinguish sequence variants that differ by one nucleotide and infer the biological sequence in the sample before introducing sequencing and amplification errors [@callahan2017exact]. Using the OTUs and ASVs data sets, the microbial diversity at various depth and oxygen concentration of the Saanich Inlet samples is assessed with the main focus on the *Planctomyces* genus.
     
