--- a/main.bib
+++ b/main.bib
@@ -193,7 +193,7 @@
 }
 
 @Misc{mothur,
-  Title                    = {{mothur Pipeline}},
+  Title                    = {{Mothur Pipeline}},
 
   Author                   = {Kim Dill McFarland},
   HowPublished             = {\url{https://github.com/EDUCE-UBC/MICB425/blob/master/Module_03/Project1/data/mothur_pipeline.html}},
